fix layout shift on web component load

--- a/bookmark-landing-page-master/components/mobile-navbar.css
+++ b/bookmark-landing-page-master/components/mobile-navbar.css
@@ -1,3 +1,6 @@
+nav {
+  display: block !important;
+}
 a {
   color: inherit;
   text-decoration: none;
